[package]
name = "hakana-default"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "hakana-language-server"
path = "src/lsp.rs"

[[bin]]
name = "hakana"
path = "src/main.rs"

[dependencies]
hakana-cli = { path = "src/cli" }
hakana-analyzer = { path = "src/analyzer" }
hakana-str = { path = "src/str" }
hakana-language-server = { path = "src/language_server" }
hakana-workhorse = { path = "src/file_scanner_analyzer" }
executable-finder = { path = "src/executable_code_finder" }
mimalloc = { version = "*", default-features = false }
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
tokio = { version = "1.26.0", features = ["full"] }

[workspace]
members = [
    "src/aast_utils",
    "src/algebra",
    "src/analyzer",
    "src/cli",
    "src/code_info",
    "src/code_info_builder",
    "src/file_scanner_analyzer",
    "src/language_server",
    "src/logger",
    "src/js_interop",
    "src/executable_code_finder",
]
exclude = ["third-party"]


[profile.release]
debug = true

[build-dependencies]
anyhow = { version = "1.0", default-features = false }
vergen = "6"
