[package]
name = "hakana-default"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "hakana"
path = "src/main.rs"

[[bin]]
name = "hakana-daemon"
path = "src/daemon.rs"

[[bin]]
name = "hakana-language-server"
path = "src/lsp_daemon_client.rs"

[[bin]]
name = "hakana-mcp-server"
path = "src/mcp_server.rs"

[dependencies]
hakana-cli = { path = "src/cli" }
hakana-analyzer = { path = "src/analyzer" }
hakana-str = { path = "src/str" }
hakana-language-server = { path = "src/language_server" }
hakana-daemon-server = { path = "src/daemon_server" }
hakana-orchestrator = { path = "src/orchestrator" }
executable-finder = { path = "src/executable_code_finder" }
mimalloc = { version = "*", default-features = false }
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[workspace]
members = [
    "src/aast_utils",
    "src/algebra",
    "src/analyzer",
    "src/cli",
    "src/code_info",
    "src/code_info_builder",
    "src/orchestrator",
    "src/language_server",
    "src/daemon_server",
    "src/logger",
    "src/js_interop",
    "src/executable_code_finder",
]
exclude = ["third-party"]


[profile.release]
debug = true

[build-dependencies]
anyhow = { version = "1.0", default-features = false }
vergen = "6"
