[package]
name = "hakana-aast-helper"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
parser_core_types = { path = "../../third-party/hhvm/hphp/hack/src/parser/cargo/core_types" }
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
relative_path = { path = "../../third-party/hhvm/hphp/hack/src/utils/rust/relative_path" }
aast_parser = { path = "../../third-party/hhvm/hphp/hack/src/parser/cargo/aast_parser" }
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "1.1.0"
