[package]
name = "hakana-algebra"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
rand = "0.8.5"
serde_json = "1.0"
indexmap = "1.8.0"
itertools = "0.10.1"
xxhash-rust = { version = "0.8.3", features = ["xxh3", "xxh32"] }
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
rustc-hash = "1.1.0"

[lib]
path = "lib.rs"

[lints.clippy]
type_complexity = "allow"