[package]
name = "hakana-algebra"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
indexmap = "1.8.0"
itertools = "0.10.1"
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
rustc-hash = "1.1.0"

[lib]
path = "lib.rs"

[lints.clippy]
type_complexity = "allow"