[package]
name = "hakana-analyzer"
version = "0.1.15"
edition = "2021"

[dependencies]
regex = "1"
lazy_static = "1"
rand = "0.8.5"
indexmap = "1.8.0"
hakana-type = { path = "../ttype" }
hakana-algebra = { path = "../algebra" }
hakana-reflection-info = { path = "../code_info" }
hakana-reflector = { path = "../code_info_builder" }
parser_core_types = { path = "../../third-party/hhvm/hphp/hack/src/parser/cargo/core_types" }
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
ocamlrep = { path = "../../third-party/hhvm/hphp/hack/src/ocamlrep" }
naming_special_names_rust = { path = "../../third-party/hhvm/hphp/hack/src/naming" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
rustc-hash = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pcre2 = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
regex = "1.6.0"

[lib]
path = "lib.rs"