[package]
name = "hakana-analyzer"
version = "0.1.16"
edition = "2024"

[dependencies]
regex = "1"
lazy_static = "1"
indexmap = "1.8.0"
itertools = "0.10.1"
hakana-algebra = { path = "../algebra" }
hakana-logger = { path = "../logger" }
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
hakana-reflector = { path = "../code_info_builder" }
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
relative_path = { path = "../../third-party/hhvm/hphp/hack/src/utils/rust/relative_path" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
rustc-hash = "1.1.0"
bstr = "1"

[lib]
path = "lib.rs"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"