[package]
name = "hakana-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
hakana-orchestrator = { path = "../orchestrator" }
hakana-analyzer = { path = "../analyzer" }
hakana-logger = { path = "../logger" }
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
executable-finder = { path = "../executable_code_finder" }
walkdir = "2"
clap = { version = "3.2.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
indexmap = "1.8.0"
serde_json = "1.0"
rustc-hash = "1.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1.26.0", features = ["full"] }

[lib]
path = "lib.rs"

[lints.clippy]
too_many_arguments = "allow"