[package]
name = "hakana-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
hakana-orchestrator = { path = "../orchestrator" }
hakana-analyzer = { path = "../analyzer" }
hakana-logger = { path = "../logger" }
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
hakana-language-server = { path = "../language_server" }
hakana-lint = { path = "../lint" }
hakana-protocol = { path = "../protocol" }
hakana-server = { path = "../server" }
executable-finder = { path = "../executable_code_finder" }
line_break_map = { path = "../../third-party/hhvm/hphp/hack/src/utils/line_break_map" }
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
walkdir = "2"
glob = "0.3"
clap = { version = "3.2.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
indexmap = "1.8.0"
serde_json = "1.0"
rustc-hash = "1.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1.26.0", features = ["full"] }
similar = "2.7.0"
indicatif = "0.17"

[lib]
path = "lib.rs"

[lints.clippy]
too_many_arguments = "allow"