[package]
name = "hakana-code-info"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
hakana-str = { path = "../str" }
itertools = "0.10.1"
indexmap = "1.8.0"
strum = "0.23"
strum_macros = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1.0"
derivative = "2.2.0"
compact_str = { version = "0.9.0", features = ["serde"] }

[lints.clippy]
type_complexity = "allow"