[package]
name = "hakana-daemon-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "hakana_daemon_server"
path = "lib.rs"

[dependencies]
hakana-analyzer = { path = "../analyzer" }
hakana-code-info = { path = "../code_info" }
hakana-orchestrator = { path = "../orchestrator" }
hakana-logger = { path = "../logger" }
hakana-str = { path = "../str" }
tokio = { version = "1.26.0", features = ["full"] }
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
rustc-hash = "1.1.0"