[package]
name = "executable-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
hakana-analyzer = { path = "../analyzer" }
hakana-logger = { path = "../logger" }
hakana-executor = { path = "../executor" }
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
hakana-orchestrator = { path = "../orchestrator" }
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
indicatif = "0.17.0-rc.11"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
path = "lib.rs"