[package]
name = "hakana-full-fidelity-ast-helper"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
parser_core_types = { path = "../../third-party/hhvm/hphp/hack/src/parser/cargo/core_types" }
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
naming_special_names_rust = { path = "../../third-party/hhvm/hphp/hack/src/naming" }
positioned_by_ref_parser = { path = "../../third-party/hhvm/hphp/hack/src/parser/api/cargo/positioned_by_ref_parser" }
ocamlrep = { version = "0.1.0", git = "https://github.com/facebook/ocamlrep/", branch = "main" }