[package]
name = "js_interop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.79"
hakana-workhorse = {path = "../file_scanner_analyzer"}
hakana-reflection-info = {path = "../code_info"}
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true