[package]
name = "js_interop"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.79"
hakana-orchestrator = {path = "../orchestrator"}
hakana-code-info = {path = "../code_info"}
hakana-str = {path = "../str"}
serde_json = "1.0"
console_error_panic_hook = "0.1.7"

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true