[package]
name = "hakana-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hakana-workhorse = { path = "../file_scanner_analyzer" }
hakana-analyzer = { path = "../analyzer" }
hakana-logger = { path = "../logger" }
hakana-str = { path = "../str" }
hakana-code-info = { path = "../code_info" }
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0"
rustc-hash = "1.1.0"

[lib]
path = "lib.rs"