[package]
name = "hakana-logger"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-lsp = { git = "https://github.com/ebkalderon/tower-lsp", branch = "support-mutable-methods" }
tokio = { version = "1.26.0", features = ["full"] }

[lib]
path = "lib.rs"