[package]
name = "hakana-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
hakana-reflector = { path = "../code_info_builder" }
hakana-code-info = { path = "../code_info" }
hakana-str = { path = "../str" }
hakana-analyzer = { path = "../analyzer" }
hakana-logger = { path = "../logger" }
hakana-executor = { path = "../executor" }
hakana-aast-helper = { path = "../aast_utils" }
aast_parser = { path = "../../third-party/hhvm/hphp/hack/src/parser/cargo/aast_parser" }
ocamlrep = { version = "0.1.0", git = "https://github.com/facebook/ocamlrep/", branch = "main" }
parser_core_types = { path = "../../third-party/hhvm/hphp/hack/src/parser/cargo/core_types" }
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
naming_special_names_rust = { path = "../../third-party/hhvm/hphp/hack/src/naming" }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
xxhash-rust = { version = "0.8.3", features = ["xxh3", "xxh32"] }
indexmap = { version = "1.8.0", features = ["serde"] }
rust-embed = { version = "6.4.0", features = [
    "interpolate-folder-path",
    "include-exclude",
] }
ignore = "= 0.4.18"
indicatif = "0.17.0-rc.11"
rustc-hash = "1.1.0"
glob = "0.3.0"
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
tokio = { version = "1.26.0", features = ["full"] }

[lib]
path = "lib.rs"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"