[package]
name = "hakana-type"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
hakana-reflection-info = { path = "../code_info" }
function_context = { path = "../function_context" }
oxidized = { path = "../../third-party/hhvm/hphp/hack/src/oxidized" }
itertools = "0.10.1"
indexmap = "1.8.0"